force-app/main/default/objects/KBD_Creation_KBD_Team__c/KBD_Creation_KBD_Team__c.object-meta.xml
<CustomObject>
    <label>KBD Creation - KBD Team</label>
    <nameField>
        <displayFormat>KBD{0000}</displayFormat>
        <label>KBD Creation - KBD Team Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KBD Creation - KBD Team</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>