force-app/main/default/objects/KBD_Creation_KBD_Team__c/fields/Action_New_KBD_or_Change_in_existing_KB__c.field-meta.xml
<CustomField>
    <fullName>Action_New_KBD_or_Change_in_existing_KB__c</fullName>
    <label>Action (New KBD or Change in existing KB</label>
    <length>200</length>
    <type>Text</type>
</CustomField>