force-app/main/default/objects/KBD_Creation_KBD_Team__c/fields/Allowance_Code__c.field-meta.xml
<CustomField>
    <fullName>Allowance_Code__c</fullName>
    <label>Allowance Code</label>
    <length>200</length>
    <type>Text</type>
</CustomField>