force-app/main/default/objects/KBD_Creation_KBD_Team__c/fields/Brand_Code__c.field-meta.xml
<CustomField>
    <fullName>Brand_Code__c</fullName>
    <label>Brand Code</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>