force-app/main/default/objects/KBD_Creation_KBD_Team__c/fields/Future_KBD_Amt__c.field-meta.xml
<CustomField>
    <fullName>Future_KBD_Amt__c</fullName>
    <label>Future KBD Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>