force-app/main/default/objects/KBD_Creation_KBD_Team__c/fields/Future_NOIA_End__c.field-meta.xml
<CustomField>
    <fullName>Future_NOIA_End__c</fullName>
    <label>Future NOIA End</label>
    <type>Date</type>
</CustomField>