force-app/main/default/objects/KBD_Creation_KBD_Team__c/fields/Future_NOIA_Start__c.field-meta.xml
<CustomField>
    <fullName>Future_NOIA_Start__c</fullName>
    <label>Future NOIA Start</label>
    <type>Date</type>
</CustomField>