force-app/main/default/objects/KBD_Creation_KBD_Team__c/fields/Future_PG_List__c.field-meta.xml
<CustomField>
    <fullName>Future_PG_List__c</fullName>
    <label>Future PG List</label>
    <type>TextArea</type>
</CustomField>