force-app/main/default/objects/KBD_Creation_KBD_Team__c/fields/GDM_Category__c.field-meta.xml
<CustomField>
    <fullName>GDM_Category__c</fullName>
    <label>GDM Category</label>
    <length>200</length>
    <type>Text</type>
</CustomField>