force-app/main/default/objects/KBD_Creation_KBD_Team__c/fields/Item_Description__c.field-meta.xml
<CustomField>
    <fullName>Item_Description__c</fullName>
    <label>Item Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>