force-app/main/default/objects/KBD_Creation_KBD_Team__c/fields/KBD_Amount__c.field-meta.xml
<CustomField>
    <fullName>KBD_Amount__c</fullName>
    <label>KBD Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>