force-app/main/default/objects/KBD_Creation_KBD_Team__c/fields/KBD_Count__c.field-meta.xml
<CustomField>
    <fullName>KBD_Count__c</fullName>
    <label>KBD Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>