force-app/main/default/objects/KBD_Creation_KBD_Team__c/fields/KBD_End_Date__c.field-meta.xml
<CustomField>
    <fullName>KBD_End_Date__c</fullName>
    <label>KBD End Date</label>
    <type>Date</type>
</CustomField>