force-app/main/default/objects/KBD_Creation_KBD_Team__c/fields/KBD_Level__c.field-meta.xml
<CustomField>
    <fullName>KBD_Level__c</fullName>
    <label>KBD Level</label>
    <length>200</length>
    <type>Text</type>
</CustomField>