force-app/main/default/objects/KBD_Creation_KBD_Team__c/fields/NOI_Count__c.field-meta.xml
<CustomField>
    <fullName>NOI_Count__c</fullName>
    <label>NOI Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>