force-app/main/default/objects/KBD_Creation_KBD_Team__c/fields/PG_Net__c.field-meta.xml
<CustomField>
    <fullName>PG_Net__c</fullName>
    <label>PG Net</label>
    <length>200</length>
    <type>Text</type>
</CustomField>