force-app/main/default/objects/KBD_Creation_KBD_Team__c/fields/Sell_Units__c.field-meta.xml
<CustomField>
    <fullName>Sell_Units__c</fullName>
    <label>Sell Units</label>
    <length>200</length>
    <type>Text</type>
</CustomField>