force-app/main/default/objects/KBD_Creation_KBD_Team__c/fields/Unit_Size__c.field-meta.xml
<CustomField>
    <fullName>Unit_Size__c</fullName>
    <label>Unit Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>