force-app/main/default/objects/KBD_Creation_KBD_Team__c/fields/WMVNPK_Cost__c.field-meta.xml
<CustomField>
    <fullName>WMVNPK_Cost__c</fullName>
    <label>WMVNPK Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>